<?xml version="1.0" encoding="utf-8"?>

<!--
~ This file is part of FreedomBox.
~
~ FreedomBox is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ FreedomBox is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with FreedomBox. If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="18dp">

    <EditText
        android:id="@+id/boxName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/box_name"
        android:textColor="@drawable/selector_txt" />

    <EditText
        android:id="@+id/discoveredUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxName"
        android:layout_marginBottom="10dp"
        android:inputType="textUri"
        android:hint="@string/discovered_url"
        android:textColor="@drawable/selector_txt" />

    <Switch
        android:id="@+id/defaultStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/discoveredUrl"
        android:text="@string/switch_title" />

    <Button
        android:id="@+id/saveConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/defaultStatus"
        android:text="@string/save" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/deleteConfig"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveConfig"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/delete"
        android:visibility="invisible" />

</RelativeLayout>
